--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch==1.13.1
-torchvision
-torchaudio
+torch==2.0.0
+torchmetrics==0.11.4
+torchvision==0.15.1
+torchaudio==2.0.1
 taming-transformers-rom1504
 k-diffusion
 omegaconf
@@ -26,3 +27,5 @@ ray
 webdataset
 safetensors
 prettytable
+boto3>=1.21.32
+accelerate>=0.20.3
